@@ -4,6 +4,7 @@ import com.vladmihalcea.hibernate.type.AbstractHibernateType;
 import com.vladmihalcea.hibernate.type.array.internal.ArraySqlTypeDescriptor;
 import com.vladmihalcea.hibernate.type.array.internal.EnumArrayTypeDescriptor;
 import com.vladmihalcea.hibernate.type.util.Configuration;
+import com.vladmihalcea.hibernate.type.util.ParameterizedParameterType;
 import org.hibernate.annotations.Type;
 import org.hibernate.usertype.DynamicParameterizedType;
 
@@ -43,6 +44,14 @@ public class EnumArrayType
         );
     }
 
+    public EnumArrayType(Class<? extends Enum> enumClass, String sqlArrayType) {
+        this();
+        Properties parameters = new Properties();
+        parameters.setProperty(SQL_ARRAY_TYPE, sqlArrayType);
+        parameters.put(DynamicParameterizedType.PARAMETER_TYPE, new ParameterizedParameterType(enumClass));
+        setParameterValues(parameters);
+    }
+
     public String getName() {
         return name;
     }
@@ -55,7 +64,6 @@ public class EnumArrayType
     @Override
     public void setParameterValues(Properties parameters) {
         DynamicParameterizedType.ParameterType parameterType = (ParameterType) parameters.get(DynamicParameterizedType.PARAMETER_TYPE);
-
         Annotation[] annotations = parameterType.getAnnotationsMethod();
         if (annotations != null) {
             for (int i = 0; i < annotations.length; i++) {
@@ -72,4 +80,5 @@ public class EnumArrayType
         }
         ((EnumArrayTypeDescriptor) getJavaTypeDescriptor()).setParameterValues(parameters);
     }
+
 }
